# apwm

./: Cargo.toml  index.toml  manifest.toml
scripts/: generate_index_from_github_releases.nu
src/: cli.rs  index.rs  installed_world_metadata.rs  lib.rs  main.rs  manifest.rs
src/cli/: apply.rs  install.rs  list.rs  search.rs
src/index/: v1.rs
